tests/negative/test_tuple_arr_cn_memb_no_init.orb
fnc main() () {
    sym x:(((i32 cn) bool) 4);
};